Adding tests for object arrays in object arrays and logic to support them.
Signed-off-by: forestmvey <forestv@bitquilltech.com>